fixed image alignment on tablet view

--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ main {
   text-align: center;
 
   border: none;
+  background: none;
 
   width: 5rem;
 
@@ -306,7 +307,7 @@ footer p {
 
   .products-container .products-list img {
     width: 15rem;
-    height: 15rem;
+    height: 14.5rem;
   }
 
   .products-container .input-container {
@@ -314,15 +315,15 @@ footer p {
   }
 
   .products-container .products-list div header p {
-    font-size: 2rem;
+    font-size: 18px;
   }
 
   .products-container .products-list div header .price {
-    font-size: 2.5rem;
+    font-size: 22px;
   }
 
   .products-container .products-list div header .price small {
-    font-size: 1.6rem;
+    font-size: 14px;
   }
 }
 
@@ -354,7 +355,7 @@ footer p {
   }
 
   .products-container {
-    margin-top: 50px;
+    margin-top: 60px;
   }
 
   .products-container article > div {
